--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "xlsx": "^0.18.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
